# vscodeext

./: .eslintignore  .gitignore
.github/: pull_request_template.md
.github/workflows/: build-linux.yml
.github/workflows/qtcli/: action.yml
doc/src/: externallinks.qdoc
doc/src/how-to/: vscodeext-how-to-create-files.qdoc  vscodeext-how-to-create-projects.qdoc  vscodeext-how-to-debug-apps-wasm.qdoc  vscodeext-how-to-debug-apps.qdoc
doc/src/tutorials/: vscodeext-tutorials-qt-widgets.qdoc
qt-cli/: .goreleaser.yaml  Development.md  README.md  ThirdPartyNotices.txt
qt-cli/others/: ThirdPartyNotices.tpl
qt-cli/src/: go.mod  go.sum  main.go
qt-cli/src/assets/templates/common/: file.ts
qt-cli/src/assets/templates/projects/cpp/console/: CMakeLists.txt  main.cpp  prompt.yml  templates.yml
qt-cli/src/assets/templates/projects/cpp/qtquick/: CMakeLists.txt  Main.qml  main.cpp  prompt.yml  qtquickcontrols2.conf  templates.yml
qt-cli/src/assets/templates/projects/cpp/qwidget/: CMakeLists.txt  main.cpp  prompt.yml  templates.yml  widget.cpp  widget.h  widget.ui
qt-cli/src/assets/templates/types/qml/: templates.yml
qt-cli/src/assets/templates/types/qrc/: templates.yml
qt-cli/src/assets/templates/types/ts/: prompt.yml  templates.yml
qt-cli/src/assets/templates/types/ui/: file.ui  prompt.yml  templates.yml
qt-cli/src/cmds/: new_cmd.go  new_file_cmd.go  preset_cmd.go  root_cmd.go  test_cmd.go
qt-cli/src/common/: common.go  preset.go  target_type.go
qt-cli/src/formats/: prompt_file.go  template_file.go  user_preset_file.go
qt-cli/src/generator/: api_general.go  env.go  generator.go  result.go
qt-cli/src/prompt/: flow.go  prompt.go  result.go  selection.go  styles.go
qt-cli/src/prompt/comps/: comps.go  input.go  input_model.go  input_validator.go  list.go  list_item.go  list_model.go
qt-cli/src/runner/: default_preset.go  runner.go  text_ui.go
qt-cli/src/util/: expander.go  util.go
qt-core/: CHANGELOG.md  package-lock.json  package.json  package.nls.json
qt-core/src/: extension.ts
qt-core/src/qtcli/: commands.ts  common.ts  exe-finder.ts  new-name-input.ts  runner.ts
qt-cpp/: CHANGELOG.md  package-lock.json  package.json
qt-cpp/src/: kit-manager.ts
qt-lib/: package-lock.json  package.json
qt-lib/src/: color-provider.ts  index.ts
qt-qml/: CHANGELOG.md  package-lock.json  package.json
qt-qml/src/: extension.ts
qt-ui/: CHANGELOG.md  package-lock.json  package.json
